infra/k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agrisecure-api
  namespace: agri-secure
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: agrisecure.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agrisecure-api
                port:
                  number: 8000
